# galene-bot

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
examples/: ircbridge.py  smilebot.py  welcomebot.py
galene_bot/: __init__.py  base_argparse.py  base_bot.py
